feature/frontend/calendar_crud Many needed corrections, model changes, base calendar and month creation

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -57,3 +57,15 @@ input[type="password"]:focus {
   border: 3px solid #61dafb;
   box-sizing: border-box;
 }
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
+/* Para Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+  appearance: textfield;
+}
