--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   font-family: 'Press Start 2P', monospace;
   background-color: #222; /* Fundo escuro para destacar */
