--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -33,6 +33,7 @@ button:hover {
 }
 input[type="text"],
 input[type="email"],
+input[type="number"],
 input[type="password"] {
   font-family: 'Press Start 2P', monospace;
   background-color: #111;
@@ -45,6 +46,7 @@ input[type="password"] {
 }
 
 input[type="text"]:focus,
+input[type="number"]:focus,
 input[type="password"]:focus {
   border-color: #21a1f1;
 }
@@ -68,4 +70,19 @@ input[type=number]::-webkit-outer-spin-button {
 input[type=number] {
   -moz-appearance: textfield;
   appearance: textfield;
+}
+
+select {
+  font-family: 'Press Start 2P', monospace;
+  background-color: #111;
+  border: 3px solid #61dafb;
+  color: #eee;
+  padding: 8px;
+  width: 100%;
+  box-sizing: border-box;
+  outline: none;
+}
+
+select:focus {
+  border-color: #21a1f1;
 }
